fix activities cards height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ main {
 	flex: 1 1 250px;
 	align-self: center;
 
+	width: min(100%, 250%);
 	border-radius: 1.25rem;
 
 	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
@@ -605,6 +606,7 @@ footer .footer-element:hover {
 	}
 
 	.activites-cards-container .activites-card {
+		flex: 1 1 auto;
 		width: 100%;
 	}
 
